fix: jax style issue on mobile

--- a/assets/styles/_content.scss
+++ b/assets/styles/_content.scss
@@ -61,4 +61,9 @@
       }
     }
   }
+
+  .tex2jax {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 }
